--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
 	"prefix": "$",
-	"token": "NzA1MTk3MjM0NzAyMTIzMTI4.XqoM0Q.9x1-LaISLpUfoOz5BRGMqDaNizo",
+	"token": "NzA1MTk3MjM0NzAyMTIzMTI4.Xqr-jA.bzw7KVJoSDZJE5Z5dDumrj80X9Y",
 	"invite_link": "https://discordapp.com/oauth2/authorize?client_id=705197234702123128&scope=bot"
 }
