--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "custom discord bot",
   "main": "index.js",
   "engines": {
-  	"node": "14.0.0",
-	"npm": "6.14.4"
+    "node": "14.0.0",
+    "npm": "6.14.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"start": "node index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/MGCSousa/quack-bot#readme",
   "dependencies": {
+    "aws-sdk": "^2.666.0",
     "axios": "^0.19.2",
     "discord.js": "^12.2.0"
   }
