--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/MGCSousa/quack-bot#readme",
   "dependencies": {
+    "@discordjs/opus": "^0.2.1",
     "aws-sdk": "^2.666.0",
     "axios": "^0.19.2",
     "discord.js": "^12.2.0",
