--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "aws-sdk": "^2.666.0",
     "axios": "^0.19.2",
     "discord.js": "^12.2.0",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "lyricist": "^2.2.2"
   }
 }
