--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.19.2",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
+    "jsonfile": "^6.0.1",
     "lyricist": "^2.2.2"
   }
 }
